# apiforge-cli

./: README.md  pyproject.toml
apiforge/: cli.py  generator.py  http.py  retry.py
apiforge/templates/: client.j2
