[project]
name = "apiforge"
version = "0.1.0"
description = "Generate clean, async, typed Python API clients from OpenAPI specs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
keywords = ["openapi", "async", "http", "client", "generator"]

dependencies = [
    "httpx>=0.26",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "click>=8.1"
]

[project.scripts]
apiforge = "apiforge.cli:main"
